@@ -1,3 +1,6 @@
+4758.	[doc]		Remove documentation of unimplemented "topology".
+			[RT #46161]
+
 4756.	[bug]		Interrupting dig could lead to an INSIST failure after
 			certain errors were encountered while querying a host
 			whose name resolved to more than one address.  Change
